Fix lexicon and aim

--- a/2_abstract/1_abstract_en.tex
+++ b/2_abstract/1_abstract_en.tex
@@ -20,7 +20,8 @@ like the compendium.
 
 The aim of this work
 is creating an algorithm for obtaining panorama
-slides without a teacher from video lecture.
+slides without a teacher from video lecture
+recorded by a camera which may move or shake.
 
 To perform the study the following instruments were used:
 \begin{itemize}
