--- a/2_abstract/2_abstract_ua.tex
+++ b/2_abstract/2_abstract_ua.tex
@@ -15,8 +15,9 @@
 презентацію навчального матеріалу, яка містить лише текст з дошки,
 оскільки це більш наближено до формату конспекту.
 
-Метою роботи є створення інформаційної технології, яка з відео лекції
-зможе створити панорамні слайди без викладача.
+Метою роботи є розробка алгоритму,
+який створює панорамні слайди без викладача з відео лекції
+за умови, що камера може рухатись.
 
 Для досягнення мети було використано:
 \begin{itemize}
