--- a/3_preface/2_preface.tex
+++ b/3_preface/2_preface.tex
@@ -32,8 +32,9 @@
 \textit{Предмет дослідження}~---~автоматична обробка
 відеозаписів.
 
-\textit{Метою роботи} є розробка інформаційної технології, що перетворює 
-відеозапис лекції у панорамні знімки без викладача.
+\textit{Метою роботи} є розробка алгоритму, що перетворює 
+відеозапис лекції у панорамні знімки без викладача
+за умови, що камера може рухатись.
 
 Завдання наступні:
 \begin{enumerate}
@@ -45,6 +46,8 @@
             для знаходження в кадрі людини;
       \item
             вивчити методи обробки та порівняння зображень для створення панорамних знімків;
+      \item
+            розробити алгоритм перетворення відеозапису лекції у панорамні знімки;
       \item
             розробити демонстраційне програмне забезпечення.
 \end{enumerate}
