--- a/9_results/2_stats.tex
+++ b/9_results/2_stats.tex
@@ -1,12 +1,8 @@
-Наступні результати були отримані за допомогою мови програмування Python та
-програмних бібліотек PyTorch та PyMaxflow. Наступні тестування проводились на комп'ютері з
-процесором Intel Core i5-7200U @ 4x 3,1GHz на операційній системі Ubuntu 21.04.
+\section{Результати алгоритму Б-К та згорткових нейромереж}
 
-\section{Результати алгоритму Б-К та згорткових мереж}
-
-В даній роботі досить непогано проявив себе метод Б-К (рис. \ref{fig:bk_examples}),
-а саме програмна бібліотека PyMaxflow, автором якої ~---~ є сам Володимир Колмогоров.
-Даний метод найшвидше працює саме в ній.
+В даній роботі добре проявив себе метод Б-К (рис. \ref{fig:bk_examples}),
+а саме програмна бібліотека PyMaxflow,
+що базується на бібліотеці maxflow, автором якої є сам Володимир Колмогоров.
 
 \begin{figure}[H]
     \centering
@@ -28,43 +24,59 @@
     }
 \end{figure}
 
-Переваги використання методу:
+Переваги алгоритму Б-К:
 \begin{enumerate}
     \item алгоритм Б-К досить швидко будує мінімальний розріз. В середньому
           потрібно 0.2 секунди для кадру розміром $330 \times 640$.
     \item даний метод не потребує ніякої передобробки, тобто не потрібно навчати
-          як нейронну мережу.
+          як нейронну нейромережу.
 \end{enumerate}
 
-Недоліки використання методу:
+Недоліки алгоритму Б-К:
 \begin{enumerate}
-    \item оскільки даний метод локалізує рух на кадрах відео, то коли
-          рухається камера, відповідно практично все що в кадрі стає рухомим об'єктом
+    \item оскільки даний метод локалізує рух на кадрах відео,
+          при русі камери практично все, що в кадрі, стає рухомим об'єктом
           (рис.\ref{fig:bk_bad_mask}).
-          Частково дана проблема вирішена на 2-му кроці алгоритму створення панорами
-          (алгоритм \ref{al:panorama_creating_algorithm});
-          \begin{figure}[H]
-              \centering
-
-              \subfloat[]{
-                  \includegraphics[width=0.35\textwidth]{images/bad_prev_dorohovtsev_bk_5790}
-              }
-              \subfloat[]{
-                  \includegraphics[width=0.35\textwidth]{images/bad_next_dorohovtsev_bk_5840}
-              } \\
-              \subfloat[]{
-                  \includegraphics[width=0.35\textwidth]{images/bad_dorohovtsev_bk_example_5840}
-              }
-              \caption{Приклад поганої маски рухомих об'єктів з відео \cite{dorohovtsev_video}
-                  \label{fig:bk_bad_mask}
-              }
-          \end{figure}
-
-    \item якщо викладач практично не рухається довгий час, відповідно не потрапляє
-          на маску рухомих об'єктів, тоді він може потрапити на панорамний слайд.
+          Частково дана проблема вирішена на другому кроці алгоритму створення панорами
+          (алг. \ref{al:panorama_creating_algorithm});
+    \item якщо викладач практично не рухається впродовж довгого часу, відповідно не потрапляє
+          на маску рухомих об'єктів, він може потрапити на панорамний слайд.
 \end{enumerate}
 
-\section{Результати згорткових мереж}
+\begin{figure}[H]
+    \centering
+
+    \subfloat[]{
+        \includegraphics[width=0.35\textwidth]{images/bad_prev_dorohovtsev_bk_5790}
+    }
+    \subfloat[]{
+        \includegraphics[width=0.35\textwidth]{images/bad_next_dorohovtsev_bk_5840}
+    } \\
+    \subfloat[]{
+        \includegraphics[width=0.35\textwidth]{images/bad_dorohovtsev_bk_example_5840}
+    }
+    \caption{Приклад поганої маски рухомих об'єктів з відео \cite{dorohovtsev_video}
+        \label{fig:bk_bad_mask}
+    }
+\end{figure}
+
+\section{Результати застосування згорткових нейромереж}
+
+Переваги використання згорткових нейромереж:
+\begin{enumerate}
+    \item згорткові нейромережі для детекції людини, що були використані в даній роботі,
+          є теж досить швидкими, оскільки були створені для мобільних пристроїв;
+        \item детекція людини не залежить від руху камери, тому навіть ті кадри, що
+          отримуються під час руху камери, будуть застосовані для створення панорами;
+    \item результати експериментів свідчать про високу точність локалізації викладача.
+\end{enumerate}
+
+Недоліки використання згорткових нейромереж:
+\begin{enumerate}
+    \item якщо викладач має в руці якийсь предмет (листок паперу чи маркер), то дані
+          об'єкти нейромережа не локалізує, відповідно можуть бути дефекти на панорамі;
+    \item розмір програми стає більшим через зберігання ваг.
+\end{enumerate}
 
 \begin{figure}[H]
     \centering
@@ -124,33 +136,17 @@
     }
 \end{figure}
 
-Переваги використання згорткових мереж:
-\begin{enumerate}
-    \item згорткові мережі детекції людини, що були використані в даній роботі
-          є теж досить швидкими, оскільки були створені для мобільних пристроїв;
-    \item детекція людини не залежить від руху камери. Відповідно навіть кадри, що
-          отримуються під час руху камери будуть застосовані для створення панорами;
-    \item результати свідчать про високу точність локалізації викладача.
-\end{enumerate}
-
-Недоліки використання згорткових мереж:
-\begin{enumerate}
-    \item якщо викладач має в руці якийсь предмет (листок паперу чи маркер), то дані
-          об'єкти мережа не локалізує, відповідно можуть бути дефекти на панорамі;
-    \item розмір інформаційної технології стає більшим через зберігання ваг.
-\end{enumerate}
-
 \section{Швидкість методів локалізації людини чи рухомих об'єктів}
 
 Було протестовано 1000 разів отримання маски різними методами на картинці $720 \times 1280$ та
 отриманий середній час обробки кадру (таб. \ref{tab:speed_methods_table}).
-Варто відмітити, що картинка перед входом в шари згорток у згорткових мережах зменшується
-до базового розміру для входу мережі. Така ж компресія робиться і для входу
-в алгоритм Б-К, картинка зменшується у двічі.
+Варто відмітити, що картинка перед входом в шари згорток у згорткових нейромережах зменшується
+до базового розміру для входу нейромережі. Така ж компресія робиться і для входу
+в алгоритм Б-К, картинка зменшується удвічі.
 
 \begin{table}[H]
     \begin{center}
-        \caption{Таблиця швидкості згорткових мереж та алгоритму Б-К}
+        \caption{Таблиця швидкості згорткових нейромереж та алгоритму Б-К}
         \label{tab:speed_methods_table}
         \begin{tabular}{l|c|c|r}
             \textbf{yolov5n} & \textbf{ssdlite320-mobilenet-v3} & \textbf{fasterrcnn-mobilenet-v3} & \textbf{Boykov-Kolmogorov} \\
@@ -161,15 +157,15 @@
 \end{table}
 
 
-Як бачимо найшвидшим методом є ssdlite320-mobilenet-v3, а найдовшим Бойкова-Колмогорова.
-Але експерименти показали, що прийнятну якість дає саме yolov5n.
+Як бачимо з табл. \ref{tab:speed_methods_table}, найшвидшим методом є ssdlite320-mobilenet-v3, а найдовшим є алгоритм Бойкова-Колмогорова.
+Проте емпіричним шляхом було визначено, що кращі результати надає yolov5n.
 
 \section{Результати створення панорами}
 
 
-\section{Результати швидкої медіани}
+\section{Результати використання швидкої медіани}
 
-На рис. \ref{fig:after_median_denoising} можна побачити як медіана справляється з шумом. Написи стали більш чіткими,
+На рис. \ref{fig:after_median_denoising} можна побачити як медіана справляється з шумом та артефактами компресії. Написи стали більш чіткими,
 а фон дошки більш однорідним. Даний алгоритм доданий до інформаційної технології перетворення відео
 з дошки у слайди.
 
