--- a/9_results/4_conclusion.tex
+++ b/9_results/4_conclusion.tex
@@ -1,8 +1,9 @@
 \chapterConclusion
 
-Наведено статистичні результати роботи згорткових мереж та алгоритму Б-К. 
-Можна стверджувати, що згорткова мережа YOLOv5 є найоптимальнішим методом для 
-прибирання викладача. Також варто відмітити, що алгоритм Б-К краще працює 
+Наведено заміри швидкодії та результати роботи згорткових нейромереж та алгоритму Б-К. 
+Можна стверджувати, що згорткова нейромережа YOLOv5 є оптимальним способом
+прибирання викладача з відео. Також варто відмітити, що алгоритм Б-К
+працює краще за протестовані нейромережі,
 коли викладач має якийсь предмет в руках. Продемонстровано роботу інформаційної
 технології створення панорамних слайдів. Запропоновано використання швидкої 
 медіани замість звичайної темпоральної, що прискорило роботу системи.
