--- a/9_results/3_futher_improvements.tex
+++ b/9_results/3_futher_improvements.tex
@@ -1,17 +1,17 @@
 \section{Майбутні покращення}
 
-На даний час технологія по оцифровуванню відеозапису дошки вже може
+На поточний момент технологія оцифровування відеозапису дошки вже може
 видавати панорамні слайди за вхідними параметрами користувача. Але існує
 ряд покращень, які планується внести у майбутньому:
 
 \begin{itemize}
     \item можливість детектувати дошку, що дасть приріст у швидкості обробки
-          всього відео, оскільки панорама буде створюватись по кадрам меншої роздільної
-          здатності;
+          всього відео, оскільки панорама буде створюватись по кадрам меншого розміру;
     \item можливість детектувати секції дошки, яка розділена на декілька малих дошок;
-    \item можливість отримати панорамне відео, а не слайди.
+    \item можливість отримати панорамне відео, а не слайди;
+    \item реалізувати програмну частину за допомогою більш ефективних засобів:
+      наприклад, використовувати компільовану мову програмування
+      та використовувати обчислення на GPU \cite{cuda,opencl}.
 \end{itemize}
 
-Окрім цього, планується також переписати саму технологію на швидшу мову програмування
-C++.
 \clearpage
