--- a/bibliography.bib
+++ b/bibliography.bib
@@ -304,6 +304,14 @@
   publisher = {Curran Associates, Inc.},
   url       = {http://papers.neurips.cc/paper/9015-pytorch-an-imperative-style-high-performance-deep-learning-library.pdf}
 }
+@book{python_language,
+  author = {Van Rossum, Guido and Drake, Fred L.},
+  title = {Python 3 Reference Manual},
+  year = {2009},
+  isbn = {1441412697},
+  publisher = {CreateSpace},
+  address = {Scotts Valley, CA}
+}
 @book{quick_sort,
   title     = {Algorithms In C: Fundamentals, Data Structures, Sorting, Searching, Parts 1-4, 3/E},
   isbn      = {9788131712917},
@@ -457,4 +465,26 @@
   number  = {1},
   pages   = {198-206},
   doi     = {10.1109/TMM.2006.886385}
+}
+@book{cuda,
+  author = {Cook, Shane},
+  title = {CUDA Programming: A Developer’s Guide to Parallel Computing with GPUs},
+  year = {2012},
+  isbn = {9780124159334},
+  publisher = {Morgan Kaufmann Publishers Inc.},
+  address = {San Francisco, CA, USA},
+  edition = {1st}
+}
+@manual{opencl,
+  added-at = {2016-09-22T13:24:24.000+0200},
+  author = {{Khronos OpenCL Working Group}},
+  biburl = {https://www.bibsonomy.org/bibtex/26b05670e3e58d5d057a39491d129cad4/cepek},
+  editor = {Munshi, Aaftab},
+  interhash = {c9067650b463bd1cf1a9958491a0aadc},
+  intrahash = {6b05670e3e58d5d057a39491d129cad4},
+  keywords = {geoinformatics_fce_ctu_ref imported},
+  timestamp = {2016-09-22T13:29:55.000+0200},
+  title = {The OpenCL Specification, Version 1.1},
+  url = {https://www.khronos.org/registry/cl/specs/opencl-1.1.pdf},
+  year = 2011
 }
