add slides to presentation, change photos

--- a/presentation/index.tex
+++ b/presentation/index.tex
@@ -2,7 +2,6 @@
 \usetheme{CambridgeUS}
 
 \usepackage{graphicx}
-\usepackage{subfigure}
 
 \usepackage{caption}
 \captionsetup[figure]{labelformat=empty}% redefines the caption setup of the figures environment in the beamer class.
@@ -18,16 +17,12 @@
 \usepackage{ulem}
 % \usepackage[backend=biber,style=numeric-comp,sorting=none]{biblatex}
 \usepackage{stmaryrd}
-
 \usepackage[english]{babel}
 \usepackage{fontspec}
-
-%\usepackage{subcaption}
 \usepackage[]{graphics}
 \usepackage{mathtools}
 \usepackage{cite}
 
-%\graphicspath{{../images}}
 
 \setmainfont{cmun}[
   Extension=.otf,
@@ -60,6 +55,7 @@
 \usetikzlibrary{arrows,automata,shapes,calc,patterns,arrows.meta}
 \usetikzlibrary{fadings}
 
+\usepackage{subfig}
 % \pgfplotsset{
 %   axis line style={thick, black!50},
 % }
@@ -103,7 +99,11 @@
 \input{slides/6_slide_pipeline.tex}
 \input{slides/7_slide_video_stab.tex}
 \input{slides/8_slide_bk_algorithm_1.tex}
-%\input{slides/9_slide_bk_algorithm_2.tex}
-
-
+\input{slides/9_slide_bk_algorithm_2.tex}
+\input{slides/10_slide_cnn.tex}
+\input{slides/11_slide_panorama_1.tex}
+\input{slides/12_slide_panorama_2.tex}
+\input{slides/13_slide_process_pan_1.tex}
+\input{slides/14_slide_process_pan_2.tex}
+\input{slides/15_slide_conclusions.tex}
 \end{document}
