--- a/presentation/slides/4_slide_task.tex
+++ b/presentation/slides/4_slide_task.tex
@@ -1,9 +1,10 @@
 \begin{frame}
     \frametitle{Вступ}
-    \textbf{Об'єкт дослідження}~---~відеозаписи лекцій. \\
-    \textbf{Предмет дослідження}~---~автоматична обробка відеозаписів. \\ 
-    \textbf{Метою роботи} є розробка інформаційної технології, що перетворює 
-    відеозапис лекції у панорамні знімки без викладача. \\
+    \textit{Об'єкт дослідження}~---~відеозаписи лекцій. \\
+    \textit{Предмет дослідження}~---~автоматична обробка відеозаписів. \\
+    \textit{Метою роботи} є розробка алгоритму, що перетворює 
+    відеозапис лекції у панорамні знімки без викладача
+    за умови, що камера може рухатись. \\
 
     Дана інформаційна технологія повинна мати ряд властивостей:
     \begin{itemize}
