--- a/9_results/3_futher_improvements.tex
+++ b/9_results/3_futher_improvements.tex
@@ -9,6 +9,7 @@
           всього відео, оскільки панорама буде створюватись по кадрам меншого розміру;
     \item можливість детектувати секції дошки, яка розділена на декілька малих дошок;
     \item можливість отримати панорамне відео, а не слайди;
+    \item можливість векторизувати написи на дошці;
     \item реалізувати програмну частину за допомогою більш ефективних засобів:
       наприклад, використовувати компільовану мову програмування
       та використовувати обчислення на GPU \cite{cuda,opencl}.
