--- a/bibliography.bib
+++ b/bibliography.bib
@@ -131,7 +131,7 @@
 }
 @misc{fpmi_2021_video,
   title   = {Кратные интегралы и теория поля / 2 курс 1 семестр},
-  url     = {https://www.youtube.com/watch?v=_pt7x37urx4},
+  url     = {https://youtu.be/_pt7x37urx4},
   journal = {YouTube},
   author  = {ФПМИ, Лекторий},
   year    = {2021},
