--- a/presentation/index.tex
+++ b/presentation/index.tex
@@ -22,7 +22,7 @@
 \usepackage[]{graphics}
 \usepackage{mathtools}
 \usepackage{cite}
-
+\usepackage{hyperref}
 
 \setmainfont{cmun}[
   Extension=.otf,
