--- a/presentation/slides/13_slide_process_pan_1.tex
+++ b/presentation/slides/13_slide_process_pan_1.tex
@@ -3,8 +3,12 @@
     \frametitle{Обробка слайдів}
     \begin{figure}[H]
         \centering
-        \subfloat[Оператор Лапласа + Бінаризація Отсу]{
-            \includegraphics[width=0.35\textwidth]{images/prev_bin_slide}
+        \subfloat[RGB слайд]{
+            \includegraphics[width=0.45\textwidth]{images/nyakovlev_ivk_rgb.png}
         }
+        \subfloat[Оператор Лапласа + Бінаризація Отсу]{
+            \includegraphics[width=0.45\textwidth]{images/nyakovlev_ivk_bin.png}
+        }
+        \caption{Джерело ~---~ \url{https://youtu.be/vlKvBax6nHY}}
     \end{figure}
 \end{frame}
