--- a/presentation/slides/2_slide_motivation_1.tex
+++ b/presentation/slides/2_slide_motivation_1.tex
@@ -5,6 +5,8 @@
     \end{figure}
     \begin{figure}
         \includegraphics[width=0.7\textwidth]{images/after.png}
+        \caption{Джерело ~---~\url{https://youtu.be/a7TUp4p-pIk}
+        }
     \end{figure}
 
 \end{frame}
