--- a/presentation/slides/3_slide_motivation_2.tex
+++ b/presentation/slides/3_slide_motivation_2.tex
@@ -8,6 +8,8 @@
         \includegraphics[width=0.3\textwidth]{images/kratnye_intergraly_right.png}
     \end{figure}
     \begin{figure}
-        \includegraphics[width=0.8\textwidth]{images/kratnye_integraly_panorama.png}
+        \includegraphics[width=0.75\textwidth]{images/kratnye_integraly_panorama.png}
+        \caption{Джерело ~---~ \url{https://youtu.be/_pt7x37urx4}
+        }
     \end{figure}
 \end{frame}
