--- a/presentation/slides/4_slide_task.tex
+++ b/presentation/slides/4_slide_task.tex
@@ -2,17 +2,25 @@
     \frametitle{Вступ}
     \textit{Об'єкт дослідження}~---~відеозаписи лекцій. \\
     \textit{Предмет дослідження}~---~автоматична обробка відеозаписів. \\
-    \textit{Метою роботи} є розробка алгоритму, що перетворює 
+    \textit{Метою роботи} є розробка алгоритму, що перетворює
     відеозапис лекції у панорамні знімки без викладача
     за умови, що камера може рухатись. \\
-
-    Дана інформаційна технологія повинна мати ряд властивостей:
+    Даний алгоритм має:
     \begin{itemize}
-        \item здатність працювати на звичайному смартфоні у режимі реального часу;
-        \item можливість працювати з дошками різного кольору;
-        \item можливість працювати з рухливою камерою;
-        \item мінімальна кількість дефектів на слайдах,
-            таких як наявність фрагментів викладача
-            або видимі шви у місцях склейки кадрів.
+        \item враховувати дошки різного кольору;
+        \item враховувати рух камери під час зйомки;
+        \item давати мінімальну кількість дефектів на слайдах,
+              таких як наявність фрагментів викладача;
+        \item мати можливість ефективної реалізації на звичайному смартфоні.
     \end{itemize}
+    Апробація результатів роботи:
+    \begin{enumerate}
+        \item Доповідь на
+              \href{https://s3.eu-central-1.amazonaws.com/ucu.edu.ua/wp-content/uploads/sites/8/2021/04/Creating-Slides-from-Video-Lecture.pdf}{Masters Symposium on Advances in Data Mining,
+                  Machine Learning, and Computer Vision в Українському Католицькому Університеті}.
+        \item Стаття <<Перетворення відеозапису з дошки у слайд-шоу>> авторів
+              Кригін В. М. та Шило М. К. прийнята до друку
+              Міжнародним науковим журналом “Control Systems and Computers”
+              (“Системи керування та комп'ютери”) та буде опублікована в № 2 (298) 2022 року.
+    \end{enumerate}
 \end{frame}
