--- a/presentation/slides/7_slide_video_stab.tex
+++ b/presentation/slides/7_slide_video_stab.tex
@@ -7,9 +7,11 @@
   \begin{figure}[H]
     \centering
     \includegraphics[width=0.55\textwidth]{images/matches_img}
-    \caption{Кадри $F^i$ (верхній) та $F^{i+s}$ (нижній) із ключовими точками та лініями, \\
-      які поєднують відповідні точки з відео
-    }
+    %\caption{}
   \end{figure}
-
+  \begin{center}
+    Кадри $F^i$ (верхній) та $F^{i+s}$ (нижній) із ключовими точками та лініями,\\
+    які поєднують відповідні точки. \\
+    Джерело ~---~ \url{https://youtu.be/a7TUp4p-pIk}
+  \end{center}
 \end{frame}
