--- a/presentation/slides/9_slide_bk_algorithm_2.tex
+++ b/presentation/slides/9_slide_bk_algorithm_2.tex
@@ -14,5 +14,7 @@
 		\subfloat[Маска рухомих об'єктів на кадрі $F^{i+s}$]{
 			\includegraphics[width=0.45\textwidth]{images/next_with_mask}
 		}
+		\caption{Джерело ~---~ \url{https://youtu.be/a7TUp4p-pIk}
+		}
 	\end{figure}
 \end{frame}
