--- a/presentation/slides/10_slide_cnn.tex
+++ b/presentation/slides/10_slide_cnn.tex
@@ -4,18 +4,18 @@
   \begin{figure}[H]
     \centering
     \subfloat[Алгоритм Б-К]{
-      \includegraphics[width=0.3\textwidth]{images/krygin_geometry_bk_17350}
+      \includegraphics[width=0.25\textwidth]{images/krygin_geometry_bk_17350}
     }
     \subfloat[yolov5n]{
-      \includegraphics[width=0.3\textwidth]{images/krygin_geometry_yolov5n_17350}
+      \includegraphics[width=0.25\textwidth]{images/krygin_geometry_yolov5n_17350}
     }\\
     \subfloat[ssdlite320-mobilenet-v3]{
-      \includegraphics[width=0.3\textwidth]{images/krygin_geometry_ssdlite320_mobilenet_v3_17350}
+      \includegraphics[width=0.25\textwidth]{images/krygin_geometry_ssdlite320_mobilenet_v3_17350}
     }
     \subfloat[fasterrcnn-mobilenet-v3]{
-      \includegraphics[width=0.3\textwidth]{images/krygin_geometry_fasterrcnn_mobilenet_v3_17350}
+      \includegraphics[width=0.25\textwidth]{images/krygin_geometry_fasterrcnn_mobilenet_v3_17350}
     }
-    % \caption{Приклад роботи методів локалізації людини та рухомих об'єктів
-    % }
+    \caption{Джерело ~---~ \url{https://youtu.be/A0S33OSngG4}
+    }
   \end{figure}
 \end{frame}
