Refactor chapters of the thesis
- Turn several subsections into subsubsections
- Turn several sections into subsections
- Turn few chapters into sections
- Fix page numbering
- Fix reviewer title

--- a/4_analogs/2_examples.tex
+++ b/4_analogs/2_examples.tex
@@ -1,4 +1,4 @@
-\section{Перша робота по оцифровуванню дошки}
+\subsection{Перша робота по оцифровуванню дошки}
 У 2004 році інженери з Microsoft Research Zhengyou Zhang
 та Li-wei He представили свій алгоритм по скануванню написів
 білої дошки \cite{zhang:2004}. Система оброблює фотографії білої дошки, локалізує область
@@ -29,7 +29,7 @@
 панорамного склеювання знімків. Головна ідея роботи полягала у розробці
 програми для телеконференцій.
 
-\section{Автоматичне сканування дошки}
+\subsection{Автоматичне сканування дошки}
 Автори роботи \cite{wienecke} створили програму, яка переводить написи на білій
 дошці у цифрові (рис. \ref{fig:wienecke}). Вони реалізували локалізацію тексту та подальшу
 його обробку. Дана технологія не вирішує проблему перекривання викладачем написів,
@@ -49,7 +49,7 @@
 Можна помітити (рис. \ref{fig:wienecke}), що, як і в попередній роботі, гарна якість виокремлення написів
 досягається тим, що дошка білого кольору.
 
-\section{Відстежування об'єкту та віднімання фону}
+\subsection{Відстежування об'єкту та віднімання фону}
 У 2012 році науковці зі Стенфордського університету Alex Gonzalez,
 Bongsoo Suh, Eun Soo Choi представили технологію \cite{suh} локалізації дошки
 (навіть такої, яка розділена на частини), відстеження викладача та його
@@ -71,7 +71,7 @@ Bongsoo Suh, Eun Soo Choi представили технологію \cite{suh}
 різну кількість дошок. Однак, варто відмітити, що тестування відбувалось на
 відео лекціях, де камера знімає всю дошку і не рухається за викладачем.
 
-\section{Відокремлення написів дошки}
+\subsection{Відокремлення написів дошки}
 У 2014 році науковці з Тайванського університету представили свій алгоритм \cite{yeh}
 оцифровування дошки (рис. \ref{fig:yeh}). Для видалення викладача, автори застосували
 алгоритм кластеризації k-means. Для отримання бінаризованих написів з дошки
@@ -94,7 +94,7 @@ Bongsoo Suh, Eun Soo Choi представили технологію \cite{suh}
 сильно відмінним від кольору дошки. Це потрібно для коректної роботи алгоритму k-means.
 Тому немає гарантії, що якийсь рухомий об'єкт не буде класифікований як дошка під час класифікації.
 
-\section{Сучасна робота}
+\subsection{Сучасна робота}
 Окремо зазначимо роботу \cite{davila:2017}
 науковців з університету Рочестер. Автори Kenny Davila та Richard Zanibbi
 використали просторово-часовий індекс для виокремлення написів і викладача (рис. \ref{fig:davila:2017}).
