--- a/6_mask/2_bk_algorithm.tex
+++ b/6_mask/2_bk_algorithm.tex
@@ -1,10 +1,10 @@
-\section{Локалізація рухомих об'єктів}
+\subsection{Локалізація рухомих об'єктів}
 
 Розглянемо теоретичне підґрунтя методів, які використовуються в даній роботі для
 локалізації рухомих об'єктів, а саме задачу пошуку мінімального розрізу графа
 та її розв'язок за допомогою алгоритму Бойкова-Колмогорова.
 
-\subsection{Задача знаходження мінімального розрізу графа}
+\subsubsection{Задача знаходження мінімального розрізу графа}
 
 Задачу знаходження мінімального розрізу та еквівалентна їй задачу пошуку максимального потоку
 можна описати на прикладі системи трубопроводу.
