--- a/6_mask/3_bk_algorithm_applying.tex
+++ b/6_mask/3_bk_algorithm_applying.tex
@@ -1,4 +1,4 @@
-\section{Застосування алгоритму Бойкова-Колмогорова}
+\subsection{Застосування алгоритму Бойкова-Колмогорова}
 
 Окремо Б-К алгоритм не є корисним для детекції рухомих об'єктів. У даній роботі
 використано метод \cite{pavliuk_krygin}, який у свою чергу використовує алгоритм Б-К
