--- a/6_mask/main.tex
+++ b/6_mask/main.tex
@@ -1,6 +1,6 @@
-\chapter{Методи локалізації людини та рухомих об'єктів}
-\import{}{1_preface}
+\section{Методи локалізації людини та рухомих об'єктів}
+% \import{}{1_preface}
 \import{}{2_bk_algorithm}
 \import{}{3_bk_algorithm_applying}
 \import{}{4_cnn}
-\import{}{5_conclusion}
+% \import{}{5_conclusion}
