--- a/7_panorama/2_frames_matching.tex
+++ b/7_panorama/2_frames_matching.tex
@@ -1,4 +1,4 @@
-\section{Пошук відповідності між кадрами}
+\subsection{Пошук відповідності між кадрами}
 
 Рух камери не є рідкістю для відеозаписів лекцій. Камера може труситись,
 коли її прикріплено до столу, де студенти пишуть лекцію, або від
@@ -16,7 +16,7 @@
 камера виглядає статичною, а сегменти дошки поступово стають видимими та
 поєднуються для утворення панорами.
 
-\subsection{SIFT}
+\subsubsection{SIFT}
 
 У 1999 році англієць Девід Лоу представив алгоритм SIFT (scale-invariant feature transform)
 \cite{sift} (укр. масштабонезалежне перетворення ознак). Даний алгоритм
@@ -167,7 +167,7 @@
           \end{figure}
 \end{enumerate}
 
-\subsection{Знаходження відповідних точок зображень}
+\subsubsection{Знаходження відповідних точок зображень}
 
 Дано два кадри \(F^{i}\) та \(F^{i + s}\). Нехай ми маємо набір
 \(\left\{ \left( p_{j}^{i},p_{j}^{i + s} \right):j = \overline{1,4} \right\}\)
