--- a/7_panorama/3_homography_estimation.tex
+++ b/7_panorama/3_homography_estimation.tex
@@ -1,4 +1,4 @@
-\section{Знаходження матриці гомографії за допомогою RANSAC}
+\subsection{Знаходження матриці гомографії за допомогою RANSAC}
 
 Матриця гомографії ~---~ матриця, що описує зв'язок точок між двома зображеннями плоскої поверхні.
 
@@ -125,7 +125,7 @@
     \end{algorithmic}
 \end{algorithm}
 
-\subsection{Обробка ключових точок з маскою}
+\subsubsection{Обробка ключових точок з маскою}
 
 Ключові точки (рис. \ref{fig:yakovlev:keypoints:a}), що дає нам дескриптор ознак SIFT, ми
 використовуємо для оцінки гомографії, але також видаляємо ті ключові
