--- a/7_panorama/4_panorama_creating.tex
+++ b/7_panorama/4_panorama_creating.tex
@@ -1,4 +1,4 @@
-\section{Створення панорамного знімку}
+\subsection{Створення панорамного знімку}
 
 Часто бувають ситуації, коли для запису лекції використовується камера з
 невисокою роздільною здатністю, через що виникає необхідність рухати
