--- a/8_slides/2_slides_creating.tex
+++ b/8_slides/2_slides_creating.tex
@@ -1,4 +1,4 @@
-\section{Порівняння слайдів}
+\subsection{Порівняння слайдів}
 
 Після видалення викладача та суміщення кадрів ми створюємо слайди у вигляді
 коротких нотаток лекції. Ми по черзі беремо пари кадрів панорами, які
