--- a/8_slides/3_fast_median.tex
+++ b/8_slides/3_fast_median.tex
@@ -1,4 +1,4 @@
-\section{Темпоральна медіана}
+\subsection{Темпоральна медіана}
 
 Введемо необхідні означення.
 
@@ -46,7 +46,7 @@
 Даний метод можна застосовувати як для прибирання швидких рухомих об'єктів,
 так і для  отримання зображення із високою роздільною здатністю (super-resolution).
 
-\section{Швидка медіана для зображень}
+\subsection{Швидка медіана для зображень}
 
 Розглянемо простий випадок взяття медіани.
 Нехай у нас є не відсортований масив цілих чисел з множини $\{0,..., 255\}$.
@@ -101,7 +101,7 @@
     \end{algorithmic}
 \end{algorithm}
 
-\section{Побудова швидкої медіани для зображень}
+\subsection{Побудова швидкої медіани для зображень}
 
 Нехай у нас на вхід подається черга із $m$ картинок. Кожну ітерацію приходить нова картинка.
 \begin{figure}[H]
@@ -232,7 +232,7 @@
     \end{algorithmic}
 \end{algorithm}
 
-\section{Порівняння складності}
+\subsection{Порівняння складності}
 Обчислимо складність швидкої медіани $m$ зображень, кожне з яких розміром $h \times w$:
 $
     \mathcal{O}(h \cdot w) (\textit{ініціалізація S, M, C} )
