--- a/config.tex
+++ b/config.tex
@@ -14,5 +14,5 @@
 \def\name{Шило Максим Костянтинович}
 \def\mentorRank{к.т.н.}
 \def\mentorName{Водолазський Євгеній Валерійович}
-\def\reviewerRank{к.т.н., зав. відділом}
+\def\reviewerRank{к.т.н., c.н.с., зав. відділом}
 \def\reviewerName{Мацелло Вячеслав Васильович}
