--- a/8_slides/main.tex
+++ b/8_slides/main.tex
@@ -1,5 +1,5 @@
-\chapter{Обробка слайдів}
-\import{}{1_preface}
+\section{Обробка слайдів}
+% \import{}{1_preface}
 \import{}{2_slides_creating}
 \import{}{3_fast_median}
-\import{}{4_conclusion}
+% \import{}{4_conclusion}
