refactror code for new agenda

--- a/1_title/1_title.tex
+++ b/1_title/1_title.tex
@@ -1,53 +1,53 @@
 \fancypagestyle{firststyle}
 {
-  \fancyfoot[C]{Київ~---~\passYear~року}
-  \fancyhead{}
+    \fancyfoot[C]{Київ~---~\passYear~року}
+    \fancyhead{}
 }
 \begin{titlepage}
   \thispagestyle{firststyle}
   \begin{center}
-    \MakeUppercase{\textbf{національний технічний університет україни}}\\[-0.5ex]
-    \MakeUppercase{\textbf{«київський політехнічний інститут \\
-        імені ігоря сікорського»}}\\[-0.5ex]
-    \MakeUppercase{\textbf{\faculty}}\\
-    \department
+      {\textbf{НАЦІОНАЛЬНИЙ ТЕХНІЧНИЙ УНІВЕРСИТЕТ УКРАЇНИ}}\\[-0.5ex]
+      {\textbf{``КИЇВСЬКИЙ ПОЛІТЕХНІЧНИЙ ІНСТИТУТ\\ імені ІГОРЯ СІКОРСЬКОГО''}}\\[-0.5ex]
+      {\textbf{\faculty}}\\
+      {\textbf{\department}}
   \end{center}
+  <<На правах рукопису>> \hfill <<До захисту допущено>>\\
+  УДК 519.854.3 \hfill Завідувач кафедри
   \begin{adjustwidth}{21em}{1em}
     \begin{flushright}
-      <<До захисту допущено>>\\
-      Завідувач кафедри\\
-      $\underset{\text{\textit{\tiny(підпис)}}}
-        {\text{\underline{\phantom{(підпис)}}}}$
-      $\underset{\text{\textit{\tiny(ініціали, прізвище)}}}
-        {\text{\underline{\departmentHead}}}$\\
-      ``${\text{\underline{\hspace{2em}}}}$''
-      ${\text{\underline{\hspace{6em}}}}$
-      \passYear~р.
+    $\underset{\text{\textit{\tiny(підпис)}}}
+    {\text{\underline{\phantom{(підпис)}}}}$
+    $\underset{\text{\textit{\tiny(ініціали, прізвище)}}}
+    {\text{\underline{\departmentHead}}}$\\
+    ``${\text{\underline{\hspace{2em}}}}$''
+    ${\text{\underline{\hspace{6em}}}}$
+    \passYear~р.
     \end{flushright}
   \end{adjustwidth}
   \begin{center}
-    \textbf{\Large \kind }\\[1ex]
+      \textbf{\Large \kind }\\[1ex]
+      \textbf{на здобуття ступеня магістра}\\
+      \textbf{за освітньо-науковою програмою ``Математичні методи моделювання, розпізнавання образів та комп'ютерного зору''}\\
+      \textbf{зі спеціальності \specialityCode~<<\specialityTitle>>}\\
+      \textbf{на тему: <<\theme>>}\\
   \end{center}
-  за спеціальністю \specialityCode~<<\specialityTitle>>\\
-  на тему <<\theme>>\\
-  Виконав студент
-  \course~курсу групи \group\\
+  Виконав:
+  студент \course~курсу групи \group\\
   \name
   \hfill$\underset{\text{\textit{\tiny(підпис)}}}
-    {\text{\underline{\phantom{(підпис)}}}}$\\
-  Керівник
+  {\text{\underline{\phantom{(підпис)}}}}$\\
+  Науковий керівник:
   \mentorRank,
   \mentorName
   \hfill$\underset{\text{\textit{\tiny(підпис)}}}
-    {\text{\underline{\phantom{(підпис)}}}}$\\
-  Рецензент
+  {\text{\underline{\phantom{(підпис)}}}}$\\
+  Рецензент:
   \reviewerRank,
   \reviewerName
   \hfill$\underset{\text{\textit{\tiny(підпис)}}}
   {\text{\underline{\phantom{(підпис)}}}}$\\
-
   \begin{adjustwidth}{16em}{1em}
-    Засвідчую, що у цій дипломній роботі
+    Засвідчую, що у цій магістерській дисертації
     немає запозичень з праць інших
     авторів без відповідних посилань.\\
     Студент
@@ -55,4 +55,3 @@
   \end{adjustwidth}
 
 \end{titlepage}
-\clearpage
