--- a/1_title/2_task.tex
+++ b/1_title/2_task.tex
@@ -1,16 +1,15 @@
 \begin{center}
-    \MakeUppercase{\textbf{національний технічний університет україни}}\\[-0.5ex]
-    \MakeUppercase{\textbf{«київський політехнічний інститут \\
-            імені ігоря сікорського»}}\\[-0.5ex]
-    \MakeUppercase{\textbf{\faculty}}\\
-    \department
+    {\textbf{НАЦІОНАЛЬНИЙ ТЕХНІЧНИЙ УНІВЕРСИТЕТ УКРАЇНИ}}\\[-0.5ex]
+    {\textbf{``КИЇВСЬКИЙ ПОЛІТЕХНІЧНИЙ ІНСТИТУТ\\ імені ІГОРЯ СІКОРСЬКОГО''}}\\[-0.5ex]
+    {\textbf{\faculty}}\\
+    {\textbf{\department}}
 \end{center}
 
-\begin{center}
+\begin{flushleft}
     Рівень вищої освіти – другий (магістерський) за освітньо-науковою програмою \\
     Спеціальність (освітньо-наукова програма) – \specialityCode~\specialityTitle \\
     («\specialityName»)
-\end{center}
+\end{flushleft}
 \begin{adjustwidth}{21em}{1em}
     \begin{flushright}
         \MakeUppercase{затверджую}\\
@@ -57,11 +56,11 @@
                   вивчити методи обробки та порівняння зображень для створення панорамних знімків;
             \item
                   розробити демонстраційне програмне забезпечення.
-      \end{enumerate}
+        \end{enumerate}
     \item[6.]
-        Орієнтовний перелік ілюстративного матеріалу: \TotalValue{totalfigures} ілюстрацій.
+        Орієнтовний перелік ілюстративного матеріалу: 15 слайдів.
     \item[7.]
-        Орієнтовний перелік публікацій: \total{citenum} найменувань.
+        Орієнтовний перелік публікацій: 1 публікація.
     \item[8.]
         Дата видачі завдання ${\text{\underline{\hspace{10em}}}}$
 \end{enumerate}
@@ -72,12 +71,23 @@
 
 \begin{table}[H]
     \centering
-    \begin{tabular}{|p{0.2in} | p{2.1in} | p{2.1in} | p{0.9in}|}
+    \begin{tabular}{|p{0.2in} | p{3in} | p{2.1in} | p{0.9in}|}
         \hline
-        № з/п & Назва етапів виконання магістерської дисертації & Термін виконання етапів магістерської дисертації & Примітка \\
+        № з/п & Назва етапів виконання магістерської дисертації            & Термін виконання етапів магістерської дисертації & Примітка \\
+        \hline
+        1.    & Постановка задачі та мети                                  &                                                  &          \\
+        \hline
+        2.    & Опис теоретичного підґрунтя                                &                                                  &          \\
+        \hline
+        3.    & Створення математичної моделі створення панорамних слайдів &                                                  &          \\
+        \hline
+        4.    & Імплементація інформаційної технології                     &                                                  &          \\
+        \hline
+        5.    & Аналіз і висновки                                          &                                                  &          \\
         \hline
     \end{tabular}
 \end{table}
+
 
 \begin{table}[H]
     \centering
