--- a/4_analogs/1_preface.tex
+++ b/4_analogs/1_preface.tex
@@ -2,5 +2,4 @@
 по створенню слайдів з відеозаписів або фотографій дошки.
 Аналізуються різні методи створення панорамних слайдів
 та алгоритми прибирання викладача з відео. Описуються переваги 
-даної роботи над аналогічними та
-робиться постановка задачі створення панорамних слайдів.
+даної роботи над аналогічними.
