--- a/5_problem/1_preface.tex
+++ b/5_problem/1_preface.tex
@@ -1,2 +1,13 @@
 У другому розділі описується постановка головних 
 задач та можливих рішень для отримання панорамних знімків.
+Описуються методи визначення області,
+де знаходиться людина або рухомі об'єкти,
+щоб у подальшому прибрати викладача з панорамних знімків.
+Розглядається будова алгоритму Бойкова-Колмогорова та згорткових мереж 
+YOLO, MobileNet, SSD, R-СNN. Описується пошук відповідності між кадрами,
+матриця гомографії та створення панорамного
+знімку без викладача.
+Описується процес прийняття рішення щодо того,
+чи брати панорамний знімок як слайд, чи ні. 
+Також наводиться приклад роботи оператору Лапласа та робиться огляд швидкої медіани для
+зменшення шуму.
