--- a/5_problem/2_problem.tex
+++ b/5_problem/2_problem.tex
@@ -14,7 +14,7 @@
 	      Трясіння камери може заважати сприймати лекцію і фокусуватись на написах дошки.
 	\item
 	      Прибирання викладача.
-	      Є чимало методів вирішення цієї задачі. Можна локалізувати тільки
+	      Існує чимало методів вирішення цієї задачі. Можна локалізувати тільки
 	      людину, а можна і всі об'єкти, що рухаються в площині дошки. Маючи
 	      дані про положення викладача в кадрі, ми матимемо змогу оновлювати
 	      з часом інформацію з дошки, яка була тимчасово перекрита.
