--- a/config.tex
+++ b/config.tex
@@ -1,5 +1,5 @@
 \def\passYear{2022}
-\def\faculty{навчально-науковий фізико-технічний інститут}
+\def\faculty{Навчально-науковий фізико-технічний інститут}
 \def\department{Кафедра математичного моделювання та аналізу даних}
 \def\departmentHead{Н. М. Куссуль}
 \def\kind{Магістерська дисертація}
