--- a/presentation/slides/15_slide_conclusions.tex
+++ b/presentation/slides/15_slide_conclusions.tex
@@ -17,6 +17,6 @@
     \item можливість векторизувати написи на дошці;
     \item реалізувати програмну частину за допомогою більш ефективних засобів:
           наприклад, використовувати компільовану мову програмування
-          та використовувати обчислення на GPU.
+          та обчислення на GPU.
   \end{itemize}
 \end{frame}
