--- a/bibliography.bib
+++ b/bibliography.bib
@@ -304,6 +304,12 @@
   publisher = {Curran Associates, Inc.},
   url       = {http://papers.neurips.cc/paper/9015-pytorch-an-imperative-style-high-performance-deep-learning-library.pdf}
 }
+@misc{pymaxflow_library,
+  title   = {pmneila/PyMaxflow: Python library for creating flow networks and computing the maxflow/mincut (aka graph-cuts for Python)},
+  url     = {https://github.com/pmneila/PyMaxflow},
+  journal = {GitHub},
+  author  = {pmneila}
+}
 @book{python_language,
   author = {Van Rossum, Guido and Drake, Fred L.},
   title = {Python 3 Reference Manual},
