--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,10 +1,11 @@
 @misc{algebra_geometry,
-  title   = {Алгебра та геометрія, лекція 22-5: алгебраїчні властивості множини матриць},
-  url     = {https://youtu.be/MNgsOb2OM30},
-  journal = {YouTube},
-  author  = {Кафедра ММЗІ},
-  year    = {2019},
-  month   = {Dec}
+  title         = {Алгебра та геометрія, лекція 22-5: алгебраїчні властивості множини матриць},
+  howpublished  = {https://youtu.be/MNgsOb2OM30},
+  journal       = {YouTube},
+  author        = {Кафедра ММЗІ},
+  year          = {2019},
+  language      = {ukrainian},
+  month         = {Dec}
 }
 @article{boykov_kolmogorov,
   author  = {Boykov, Y. and Kolmogorov, V.},
@@ -45,28 +46,27 @@
   doi     = {10.1109/ACCESS.2021.3099427}
 }
 @misc{deep_wise_sep_conv_website,
-  title   = {Depthwise separable convolutions for machine learning},
-  url     = {https://eli.thegreenplace.net/2018/depthwise-separable-convolutions-for-machine-learning/},
-  journal = {Eli Bendersky’s website},
-  author  = {Bendersky, Eli},
-  year    = {2018},
-  month   = {Apr}
+  title         = {Depthwise separable convolutions for machine learning},
+  howpublished  = {https://eli.thegreenplace.net/2018/depthwise-separable-convolutions-for-machine-learning/},
+  journal       = {Eli Bendersky’s website},
+  author        = {Bendersky, Eli},
+  year          = {2018},
+  language      = {english},
+  month         = {Apr}
 }
 @misc{dorohovtsev_video,
-  title   = {Лекция 5/1. Спецкурс весна 2020, Дороговцев Андрей Анатольевич},
-  url     = {https://youtu.be/_aGdtc23o1o},
-  journal = {YouTube},
-  author  = {Theory of Stochastic Processes},
-  year    = {2020},
-  month   = {Mar}
+  title         = {Лекция 5/1. Спецкурс весна 2020, Дороговцев Андрей Анатольевич},
+  howpublished  = {https://youtu.be/\_aGdtc23o1o},
+  year          = {2020},
+  language      = {russian},
+  month         = {Mar}
 }
 @misc{dorohovtsev_wiener_video,
-  title   = {A.A.Dorogovtsev. Properties of Wiener process, Part 3},
-  url     = {https://youtu.be/AYvxZCfPZV8},
-  journal = {YouTube},
-  author  = {Theory of Stochastic Processes},
-  year    = {2022},
-  month   = {Feb}
+  title         = {A.A.Dorogovtsev. Properties of Wiener process, Part 3},
+  howpublished  = {https://youtu.be/AYvxZCfPZV8},
+  year          = {2022},
+  language      = {english},
+  month         = {Feb}
 }
 @article{edmods_karp,
   author     = {Edmonds, Jack and Karp, Richard M.},
@@ -86,13 +86,14 @@
   numpages   = {17}
 }
 @misc{faster_rcnn,
-  doi       = {10.48550/ARXIV.1506.01497},
-  url       = {https://arxiv.org/abs/1506.01497},
-  author    = {Ren, Shaoqing and He, Kaiming and Girshick, Ross and Sun, Jian},
-  title     = {Faster R-CNN: Towards Real-Time Object Detection with Region Proposal Networks},
-  publisher = {arXiv},
-  year      = {2015},
-  copyright = {arXiv.org perpetual, non-exclusive license}
+  doi           = {10.48550/ARXIV.1506.01497},
+  howpublished  = {https://arxiv.org/abs/1506.01497},
+  author        = {Ren, Shaoqing and He, Kaiming and Girshick, Ross and Sun, Jian},
+  title         = {Faster R-CNN: Towards Real-Time Object Detection with Region Proposal Networks},
+  publisher     = {arXiv},
+  year          = {2015},
+  language      = {english},
+  copyright     = {arXiv.org perpetual, non-exclusive license}
 }
 @article{faster_rcnn_web_article,
   title   = {Faster RCNN Object detection},
@@ -130,12 +131,13 @@
   pages     = {399–404}
 }
 @misc{fpmi_2021_video,
-  title   = {Кратные интегралы и теория поля / 2 курс 1 семестр},
-  url     = {https://www.youtube.com/watch?v=_pt7x37urx4},
-  journal = {YouTube},
-  author  = {ФПМИ, Лекторий},
-  year    = {2021},
-  month   = {Dec}
+  title         = {Кратные интегралы и теория поля / 2 курс 1 семестр},
+  howpublished  = {https://www.youtube.com/watch?v=\_pt7x37urx4},
+  journal       = {YouTube},
+  author        = {ФПМИ, Лекторий},
+  year          = {2021},
+  language      = {russian},
+  month         = {Dec}
 }
 @book{hartley_zisserman_2004,
   place     = {Cambridge},
@@ -155,12 +157,13 @@
   pages     = {4-5}
 }
 @misc{krygin_geometry,
-  title   = {Krygin Geometry 2020 - Lecture 4: Part 1},
-  url     = {https://youtu.be/A0S33OSngG4},
-  journal = {YouTube},
-  author  = {FI-81-3mn PTI},
-  year    = {2020},
-  month   = {Mar}
+  title         = {Krygin Geometry 2020 - Lecture 4: Part 1},
+  howpublished  = {https://youtu.be/A0S33OSngG4},
+  journal       = {YouTube},
+  author        = {FI-81-3mn PTI},
+  year          = {2020},
+  language      = {english},
+  month         = {Mar}
 }
 @book{median_in_statistics,
   title     = {Probability theory},
@@ -271,38 +274,41 @@
   isbn      = {978-1-4577-1101-5},
   pages     = {2564-2571},
   publisher = {IEEE Computer Society},
-  title     = {ORB: An efficient alternative to SIFT or SURF.},
+  title     = {ORB: An efficient alternative to SIFT or SURF},
   year      = {2011}
 }
 @misc{patent_board,
-  author      = {В.М Кригін},
-  title       = {Спосіб перетворення відеозапису з дошки у слайд-шоу},
-  nationality = {Україна},
-  number      = {148642},
-  day         = {10},
-  month       = {feb},
-  year        = {2021},
-  pages       = {4},
-  url         = {https://sis.ukrpatent.org/uk/search/detail/1613477/}
+  author        = {В.М Кригін},
+  title         = {Спосіб перетворення відеозапису з дошки у слайд-шоу},
+  nationality   = {Україна},
+  number        = {148642},
+  day           = {10},
+  month         = {feb},
+  year          = {2021},
+  pages         = {4},
+  language      = {ukrainian},
+  howpublished  = {https://sis.ukrpatent.org/uk/search/detail/1613477/}
 }
 @article{pavliuk_krygin,
-  author  = {Павлюк А. Д, Кригiн В. М, Ткач В. М},
-  journal = {Теоретичні і прикладні проблеми фізики, математики та інформатики},
-  title   = {Відстеження періодичного руху об’єктів зі статичної камери на прикладі відеоігор},
-  year    = {2021},
-  volume  = {2},
-  number  = {9},
-  pages   = {135-137},
-  url     = {https://drive.google.com/file/d/1V9zQB2Jvgcaw3o7eEkzMmviLRrhrHbpD/view}
+  author    = {Павлюк, А.Д. and Кригiн, В.М. and Ткач, В.М.},
+  journal   = {Теоретичні і прикладні проблеми фізики, математики та інформатики},
+  title     = {Відстеження періодичного руху об’єктів зі статичної камери на прикладі відеоігор},
+  year      = {2021},
+  volume    = {2},
+  number    = {9},
+  pages     = {135-137},
+  language  = {ukrainian},
+  url       = {https://drive.google.com/file/d/1V9zQB2Jvgcaw3o7eEkzMmviLRrhrHbpD/view}
 }
 @misc{pytorch_library,
-  title     = {PyTorch: An Imperative Style, High-Performance Deep Learning Library},
-  author    = {Paszke, Adam and Gross, Sam and Massa, Francisco and Lerer, Adam and Bradbury},
-  booktitle = {Advances in Neural Information Processing Systems 32},
-  pages     = {8024--8035},
-  year      = {2019},
-  publisher = {Curran Associates, Inc.},
-  url       = {http://papers.neurips.cc/paper/9015-pytorch-an-imperative-style-high-performance-deep-learning-library.pdf}
+  title         = {PyTorch: An Imperative Style, High-Performance Deep Learning Library},
+  author        = {Paszke, Adam and Gross, Sam and Massa, Francisco and Lerer, Adam and Bradbury},
+  booktitle     = {Advances in Neural Information Processing Systems 32},
+  pages         = {8024--8035},
+  year          = {2019},
+  language      = {english},
+  publisher     = {Curran Associates, Inc.},
+  howpublished  = {http://papers.neurips.cc/paper/9015-pytorch-an-imperative-style-high-performance-deep-learning-library.pdf}
 }
 @book{quick_sort,
   title     = {Algorithms In C: Fundamentals, Data Structures, Sorting, Searching, Parts 1-4, 3/E},
@@ -324,19 +330,20 @@
   author  = {Lowe, David},
   year    = {2004},
   month   = {11},
-  pages   = {91-},
+  pages   = {91--110},
   title   = {Distinctive Image Features from Scale-Invariant Keypoints},
   volume  = {60},
   journal = {International Journal of Computer Vision},
   doi     = {10.1023/B:VISI.0000029664.99615.94}
 }
 @misc{squeeze_and_excitation_website,
-  title   = {Squeeze and Excitation Networks Explained with PyTorch Implementation},
-  url     = {https://amaarora.github.io/2020/07/24/SeNet.html},
-  journal = {Committed towards better future},
-  author  = {Arora, Aman },
-  year    = {2020},
-  month   = {Jul}
+  title         = {Squeeze and Excitation Networks Explained with PyTorch Implementation},
+  howpublished  = {https://amaarora.github.io/2020/07/24/SeNet.html},
+  journal       = {Committed towards better future},
+  author        = {Arora, Aman },
+  language      = {english},
+  year          = {2020},
+  month         = {Jul}
 }
 @article{ssd,
   title     = {SSD: Single Shot MultiBox Detector},
@@ -350,9 +357,10 @@
   pages     = {21–37}
 }
 @misc{suh,
-  title  = {Whiteboard Disclosure using Background Subtraction and Object Tracking},
-  author = {Bongsoo Suh and Alex González and Eun Soo Choi},
-  year   = {2012}
+  title     = {Whiteboard Disclosure using Background Subtraction and Object Tracking},
+  author    = {Bongsoo Suh and Alex González and Eun Soo Choi},
+  language  = {english},
+  year      = {2012}
 }
 @article{surf,
   title   = {Speeded-Up Robust Features (SURF)},
@@ -368,10 +376,10 @@
   author  = {Herbert Bay and Andreas Ess and Tinne Tuytelaars and Luc {Van Gool}}
 }
 @article{temporal_median_example_1,
-  author  = {Cordova-Esparza, Diana-Margarita and Terven, 
-             Juan and Jiménez-Hernández, 
-             Hugo and Herrera-Navarro, 
-             Ana and Vázquez Cervantes, 
+  author  = {Cordova-Esparza, Diana-Margarita and Terven,
+             Juan and Jiménez-Hernández,
+             Hugo and Herrera-Navarro,
+             Ana and Vázquez Cervantes,
              Alberto and Garcia Huerta, Juan Manuel},
   year    = {2019},
   month   = {08},
@@ -388,27 +396,30 @@
 }
 @misc{wienecke,
   author    = {Wienecke, M. and Fink, G.A. and Sagerer, G.},
-  booktitle = {Seventh International Conference on Document Analysis and Recognition, 2003. Proceedings.},
+  booktitle = {Seventh International Conference on Document Analysis and Recognition, 2003. Proceedings},
   title     = {Towards automatic video-based whiteboard reading},
   year      = {2003},
   pages     = {87-91 vol.1},
+  language  = {english},
   doi       = {10.1109/ICDAR.2003.1227633}
 }
 @misc{yakovlev_discrete_math_video,
-  title   = {Дискретна математика, лекція 05-2: відношення еквівалентності (продовження); замикання відношень},
-  url     = {https://youtu.be/a7TUp4p-pIk},
-  journal = {YouTube},
-  author  = {Кафедра ММЗІ},
-  year    = {2016},
-  month   = {Sep}
+  title         = {Дискретна математика, лекція 05-2: відношення еквівалентності (продовження); замикання відношень},
+  howpublished  = {https://youtu.be/a7TUp4p-pIk},
+  journal       = {YouTube},
+  author        = {Кафедра ММЗІ},
+  language      = {ukrainian},
+  year          = {2016},
+  month         = {Sep}
 }
 @misc{yakovlev_numbers_theory_video,
-  title   = {Основи теорії чисел, лекція 13-1: порядок лишку за модулем},
-  url     = {https://youtu.be/_8gSo2YkfAU},
-  journal = {YouTube},
-  author  = {Кафедра ММЗІ},
-  year    = {2019},
-  month   = {Jun}
+  title         = {Основи теорії чисел, лекція 13-1: порядок лишку за модулем},
+  howpublished  = {https://youtu.be/\_8gSo2YkfAU},
+  journal       = {YouTube},
+  author        = {Кафедра ММЗІ},
+  language      = {ukrainian},
+  year          = {2019},
+  month         = {Jun}
 }
 @misc{yeh,
   author    = {Yeh, Fu Hao and Lee, Greg C. and Chen, Ying Ju and Liao, Chien Hsing},
@@ -416,26 +427,29 @@
   title     = {Robust Handwriting Extraction and Lecture Video Summarization},
   year      = {2014},
   pages     = {357-360},
+  language  = {english},
   doi       = {10.1109/IIH-MSP.2014.95}
 }
 @misc{yolov1,
-  doi       = {10.48550/ARXIV.1506.02640},
-  url       = {https://arxiv.org/abs/1506.02640},
-  author    = {Redmon, Joseph and Divvala, Santosh and Girshick, Ross and Farhadi, Ali},
-  title     = {You Only Look Once: Unified, Real-Time Object Detection},
-  year      = {2015},
-  copyright = {arXiv.org perpetual, non-exclusive license}
+  doi           = {10.48550/ARXIV.1506.02640},
+  howpublished  = {https://arxiv.org/abs/1506.02640},
+  author        = {Redmon, Joseph and Divvala, Santosh and Girshick, Ross and Farhadi, Ali},
+  title         = {You Only Look Once: Unified, Real-Time Object Detection},
+  year          = {2015},
+  language      = {english},
+  copyright     = {arXiv.org perpetual, non-exclusive license}
 }
 @misc{yolov5_pytorch,
   author    = {Glenn Jocher and
                Ayush Chaurasia and
                Alex Stoken and
                Jirka Borovec and others},
-  title     = {ultralytics/yolov5: v6.1 - TensorRT, TensorFlow 
+  title     = {ultralytics/yolov5: v6.1 - TensorRT, TensorFlow
                Edge TPU and OpenVINO Export and Inference},
   month     = {feb},
   year      = {2022},
   version   = {v6.1},
+  language  = {english},
   doi       = {10.5281/zenodo.6222936},
   url       = {https://doi.org/10.5281/zenodo.6222936}
 }
