Fix two bibliography entries

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -278,7 +278,7 @@
   year      = {2011}
 }
 @misc{patent_board,
-  author        = {В.М Кригін},
+  author        = {Кригін, В. М.},
   title         = {Спосіб перетворення відеозапису з дошки у слайд-шоу},
   nationality   = {Україна},
   number        = {148642},
@@ -290,7 +290,7 @@
   howpublished  = {https://sis.ukrpatent.org/uk/search/detail/1613477/}
 }
 @article{pavliuk_krygin,
-  author    = {Павлюк, А.Д. and Кригiн, В.М. and Ткач, В.М.},
+  author    = {Павлюк, А. Д. and Кригiн, В. М. and Ткач, В. М.},
   journal   = {Теоретичні і прикладні проблеми фізики, математики та інформатики},
   title     = {Відстеження періодичного руху об’єктів зі статичної камери на прикладі відеоігор},
   year      = {2021},
