Fix bibliography entries and pages numbering

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -278,7 +278,7 @@
   year      = {2011}
 }
 @misc{patent_board,
-  author        = {В.М Кригін},
+  author        = {Кригін, В. М.},
   title         = {Спосіб перетворення відеозапису з дошки у слайд-шоу},
   nationality   = {Україна},
   number        = {148642},
@@ -290,7 +290,7 @@
   howpublished  = {https://sis.ukrpatent.org/uk/search/detail/1613477/}
 }
 @article{pavliuk_krygin,
-  author    = {Павлюк, А.Д. and Кригiн, В.М. and Ткач, В.М.},
+  author    = {Павлюк, А. Д. and Кригiн, В. М. and Ткач, В. М.},
   journal   = {Теоретичні і прикладні проблеми фізики, математики та інформатики},
   title     = {Відстеження періодичного руху об’єктів зі статичної камери на прикладі відеоігор},
   year      = {2021},
@@ -495,7 +495,7 @@
   address = {San Francisco, CA, USA},
   edition = {1st}
 }
-@manual{opencl,
+@misc{opencl,
   added-at = {2016-09-22T13:24:24.000+0200},
   author = {{Khronos OpenCL Working Group}},
   biburl = {https://www.bibsonomy.org/bibtex/26b05670e3e58d5d057a39491d129cad4/cepek},
@@ -505,6 +505,6 @@
   keywords = {geoinformatics_fce_ctu_ref imported},
   timestamp = {2016-09-22T13:29:55.000+0200},
   title = {The OpenCL Specification, Version 1.1},
-  url = {https://www.khronos.org/registry/cl/specs/opencl-1.1.pdf},
+  howpublished = {https://www.khronos.org/registry/cl/specs/opencl-1.1.pdf},
   year = 2011
 }
