Fix font, page numbering and sections

--- a/index.tex
+++ b/index.tex
@@ -2,7 +2,7 @@
 \input{macroses.tex}
 \input{config.tex}
 
-\setmainfont{XITS}
+\setmainfont{Times New Roman}
 
 \usepackage{lastpage}
 \usepackage{pdfpages}
@@ -57,7 +57,7 @@
 
 \pagenumbering{arabic}
 \pagestyle{fancy}
-\setcounter{page}{7}
+\setcounter{page}{8}
 
 \clearpage
 
